Complete styling for button group

--- a/pink.css
+++ b/pink.css
@@ -117,6 +117,7 @@ a[data-tab-key="about"],
 a[data-tab-key="friends"],
 a[data-tab-key="photos"],
 a[data-tab-key="archive"],
+a[data-tab-key="timeline"],
 a._42ft._4jy0._4jy4._517h._51sy,
 div#u_ps_fetchstream_8_0_5 > a {
   background-color: rgb(230, 144, 187) !important;
